Rename bootstrapApp module to configInitial
#12133 - As a developer, I will have implemented Angular 2 with Typescript in the PP–UI

--- a/client/index.html
+++ b/client/index.html
@@ -84,7 +84,7 @@
         <!-- Compile application JS files will be injected between the angularand endangular comments below. -->
         <!-- angular -->
         <!-- endangular -->
-        <script  type="text/javascript" src="bootstrap/bootstrapApp.js"></script>
+        <script  type="text/javascript" src="configInitial/configInitial.js"></script>
 
         <!-- Configure System.js, our module loader -->
         <script src="resources/systemjs.config.js"></script>
