Style change to Select Button
#12386 - As a developer, I will have designed and implemented UI feature for multi-provider add feature

--- a/client/app/provider/directives/providerLookupResult.html
+++ b/client/app/provider/directives/providerLookupResult.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="row m-b-sm">
                         <div class="col-sm-12">
-                            <button class="btn btn-sm btn-success">Add to Provider List</button>
+                            <button class="btn btn-sm btn-primary dark-green">Add to Provider List</button>
                         </div>
                     </div>
 
